# officialdogevm

./: .gitignore  Bytes.h  CMakeLists.txt  README.md  Serializer.cpp  Serializer.h  WireMessage.cpp  WireMessage.h  constants.h  entrypoint.cpp  entrypoint.h  go.mod  go.sum  main.go  smartdoge.cpp  smartdoge.fbs  smartdoge.grpc.fb.cc  smartdoge.grpc.fb.h  smartdoge.h  smartdoge_generated.h
cmd/: cat-testing.MD  cat.go  catimage.go  create.go  root.go  txtest.go
common/: sha256.cpp  sha256.h  sha512.cpp  sha512.h
dogewire/: auxpow.go  block.go  operations.go  transaction.go
internals/abi/: abi.go  argument.go  encode.go  method.go  types.go
internals/ast/: ast.go  ast_test.go
internals/cryptoutil/: crypto.go
internals/encoding/: encode.go
internals/opcode/: constant.go  constant_test.go
internals/parse/: lex.go  parser.go  token.go
internals/symbol/: resolver.go  scope.go  symbol.go
